<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:text="@string/btn_plus"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#039BE5"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btSubtract"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/btn_minus"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#039BE5"
            android:textSize="40sp"
            android:textStyle="bold"


            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btMultiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/btn_multiplication"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#039BE5"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btDriver"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/btn_divide"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#039BE5"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|bottom"
        android:text="@string/credit"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="bold" />

</LinearLayout>